# MacTTC

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
docs/: release.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-coin.rgba
src-tauri/src/: config.rs  downloader.rs  lib.rs  localization.rs  main.rs  scheduler.rs  tray.rs
